// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`single ops 1`] = `
"
INSERT INTO "pg-schema.alias-pk""table" (name, user_id) VALUES
  ('n1', '1') ON CONFLICT DO NOTHING RETURNING user_id AS id
----
INSERT INTO "pg-schema.alias-pk""table" (name, user_id) VALUES
  ('?', '?') ON CONFLICT DO NOTHING RETURNING user_id AS id
"
`;

exports[`single ops 2`] = `
"
WITH rows(user_id, name, _key) AS (VALUES
  ((NULL::"pg-schema.alias-pk""table").user_id, (NULL::"pg-schema.alias-pk""table").name, '<key>'),
  ('2', 'n2', '')),
  updates AS (
    UPDATE "pg-schema.alias-pk""table" SET user_id=rows.user_id, name=rows.name
    FROM rows WHERE "pg-schema.alias-pk""table".user_id=rows.user_id
    RETURNING rows._key, "pg-schema.alias-pk""table".user_id AS id),
  inserts AS (
    INSERT INTO "pg-schema.alias-pk""table" (user_id, name)
    SELECT user_id, name
    FROM rows WHERE _key NOT IN (SELECT _key FROM updates) OFFSET 1
    ON CONFLICT (user_id) DO UPDATE SET user_id=EXCLUDED.user_id, name=EXCLUDED.name
    RETURNING NULL AS _key, user_id AS id)
  SELECT _key, id FROM updates UNION ALL SELECT _key, id FROM inserts
----
WITH rows(user_id, name, _key) AS (VALUES
  ((NULL::"pg-schema.alias-pk""table").user_id, (NULL::"pg-schema.alias-pk""table").name, '?'),
  ('?', '?', '?')),
  updates AS (
    UPDATE "pg-schema.alias-pk""table" SET user_id=rows.user_id, name=rows.name
    FROM rows WHERE "pg-schema.alias-pk""table".user_id=rows.user_id
    RETURNING rows._key, "pg-schema.alias-pk""table".user_id AS id),
  inserts AS (
    INSERT INTO "pg-schema.alias-pk""table" (user_id, name)
    SELECT user_id, name
    FROM rows WHERE _key NOT IN (SELECT _key FROM updates) OFFSET ?
    ON CONFLICT (user_id) DO UPDATE SET user_id=EXCLUDED.user_id, name=EXCLUDED.name
    RETURNING NULL AS _key, user_id AS id)
  SELECT _key, id FROM updates UNION ALL SELECT _key, id FROM inserts
"
`;

exports[`single ops 3`] = `
"
INSERT INTO "pg-schema.alias-pk""table" (name, user_id) VALUES
  ('n3', id_gen()) ON CONFLICT DO NOTHING RETURNING user_id AS id
----
INSERT INTO "pg-schema.alias-pk""table" (name, user_id) VALUES
  ('?', id_gen()) ON CONFLICT DO NOTHING RETURNING user_id AS id
"
`;

exports[`single ops 4`] = `""`;

exports[`single ops 5`] = `
"
WITH rows(user_id, name, _key) AS (VALUES
  ((NULL::"pg-schema.alias-pk""table").user_id, (NULL::"pg-schema.alias-pk""table").name, '<key>'),
  ('101', 'n11', '')),
  updates AS (
    UPDATE "pg-schema.alias-pk""table" SET user_id=rows.user_id, name=rows.name
    FROM rows WHERE "pg-schema.alias-pk""table".user_id=rows.user_id
    RETURNING rows._key, "pg-schema.alias-pk""table".user_id AS id),
  inserts AS (
    INSERT INTO "pg-schema.alias-pk""table" (user_id, name)
    SELECT user_id, name
    FROM rows WHERE _key NOT IN (SELECT _key FROM updates) OFFSET 1
    ON CONFLICT (user_id) DO UPDATE SET user_id=EXCLUDED.user_id, name=EXCLUDED.name
    RETURNING NULL AS _key, user_id AS id)
  SELECT _key, id FROM updates UNION ALL SELECT _key, id FROM inserts
----
WITH rows(user_id, name, _key) AS (VALUES
  ((NULL::"pg-schema.alias-pk""table").user_id, (NULL::"pg-schema.alias-pk""table").name, '?'),
  ('?', '?', '?')),
  updates AS (
    UPDATE "pg-schema.alias-pk""table" SET user_id=rows.user_id, name=rows.name
    FROM rows WHERE "pg-schema.alias-pk""table".user_id=rows.user_id
    RETURNING rows._key, "pg-schema.alias-pk""table".user_id AS id),
  inserts AS (
    INSERT INTO "pg-schema.alias-pk""table" (user_id, name)
    SELECT user_id, name
    FROM rows WHERE _key NOT IN (SELECT _key FROM updates) OFFSET ?
    ON CONFLICT (user_id) DO UPDATE SET user_id=EXCLUDED.user_id, name=EXCLUDED.name
    RETURNING NULL AS _key, user_id AS id)
  SELECT _key, id FROM updates UNION ALL SELECT _key, id FROM inserts
"
`;

exports[`single ops 6`] = `
"
DELETE FROM "pg-schema.alias-pk""table" WHERE user_id IN('1') RETURNING user_id AS id
----
DELETE FROM "pg-schema.alias-pk""table" WHERE user_id IN('?') RETURNING user_id AS id
"
`;

exports[`single ops 7`] = `
"
DELETE FROM "pg-schema.alias-pk""table" WHERE user_id IN('2') AND (1=1) RETURNING user_id AS id
----
DELETE FROM "pg-schema.alias-pk""table" WHERE user_id IN('?') AND (?=?) RETURNING user_id AS id
"
`;

exports[`single ops 8`] = `
"
SELECT user_id, name, user_id AS id FROM "pg-schema.alias-pk""table"
  WHERE user_id IN('<id>')
----
SELECT user_id, name, user_id AS id FROM "pg-schema.alias-pk""table"
  WHERE user_id IN('?')
"
`;

exports[`single ops 9`] = `
"
SELECT user_id, name, user_id AS id FROM "pg-schema.alias-pk""table"
  WHERE user_id='<id>'
----
SELECT user_id, name, user_id AS id FROM "pg-schema.alias-pk""table"
  WHERE user_id='?'
"
`;

exports[`single ops 10`] = `
"
SELECT COUNT(1) AS count FROM "pg-schema.alias-pk""table"
  WHERE user_id='<id>'
----
SELECT COUNT(?) AS count FROM "pg-schema.alias-pk""table"
  WHERE user_id='?'
"
`;

exports[`single ops 11`] = `
"
SELECT EXISTS (SELECT true FROM "pg-schema.alias-pk""table"
  WHERE user_id='<id>')
----
SELECT EXISTS (SELECT true FROM "pg-schema.alias-pk""table"
  WHERE user_id='?')
"
`;

exports[`single ops 12`] = `
"
SELECT user_id, name, user_id AS id FROM "pg-schema.alias-pk""table"
  WHERE user_id='<id>'
  LIMIT 10
----
SELECT user_id, name, user_id AS id FROM "pg-schema.alias-pk""table"
  WHERE user_id='?'
  LIMIT ?
"
`;
